fix(site): fix some more layout issues

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -126,8 +126,6 @@ Media Queries
 .root___2UHuV {
   min-height: 100%;
   height: inherit;
-  display: flex;
-  flex-direction: column;
   flex: 0 0 200px;
   border-right: 1px solid var(--psColorsGray01);
   background: var(--psColorsBone);
@@ -143,7 +141,9 @@ Media Queries
     .root___2UHuV {
         min-height: inherit;
         overflow: visible;
+        display: flex;
         flex-direction: column-reverse;
+        flex: 0 0 auto;
         border: none;
     }
 }
